--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ uuid = "0.8"
 base64 = "0.12"
 thiserror = "1.0"
 serde_json = "1"
-serde = "1"
-serde_derive = "1"
+serde = { version = "1.0", features = ["derive"] }
 bigdecimal = { version="^0.0.15", features=["serde"] }
 
 [dev-dependencies]
